SubVersion: $Id$

To do: 
	- USB pass-thru support
	- bug with API mode (Linux & Windows): may not work with some calcs ?!


	
Log:

- 27/04/2005, version 0.0.1: roms
	- error management left untouched
	- logging reworked (use glib)
	- a single public header with functions & defs, others are private
	- slightly fixed namespace sheme
	- use strong types such as TiCalcModel, ...
	- glib is used for logging (not very much for strings)
	- documentation system has been changed
	- functions pointers have been removed
	- library has been fully documented
	- decreased number of headers to include (1 or 3)
	- reused code & concepts of Tijl Coosemans' libticables-3.9.0.
	
====[ Version II ]====

- 05/03/2005, version 3.8.9: roms
	Added gcc 4.0 -fvisibility flag support.
	Fixed getting of current handle in VTi link support with MinGW.
	Fixed bug: no support of LINK_VTL under Linux (bad method).
	
- 09/02/2005, version 3.8.8: roms
	Some clean-up and fixes in the virtual link cables.
	Removed windows.h dependancy in timeout.h.
	Fixed some MinGw compilation issues.

- 25/09/2004, version 3.8.7: roms
	Added USB direct cable support (kernel module).
	Added USB direct cable support (lib-usb).
	
- 11/06/2004, version 3.8.6: jb
	Added support for x86-64 (configure.ac, configure).

- 22/05/2004, version 3.8.6: roms
	Bug fixes from JB: buffer overflow in linux_detect.c, NULL functions
	with direct link support.
	
- 05/05/2004, version 3.8.5: roms
	Bug fix in the verbose.c compatibility support (DISPLAY).
	Merged Tijl's patch: does not build or use libusb support if libusb
	not detected.
	link_dfl changed into link_nul (null cable). Added null method and null
	port in order to implement a pure null cable.
	Default settings are now set to a null cable/port.
	
- 24/04/2004, version 3.8.4: roms
	Added buffered write support to the SilverLink / Win32 module. 
	Driver 3.0.2.1 is needed. Tested with various transfers.

- 21/04/2004, version 3.8.3: roms