@@ -28,55 +28,33 @@ typedef enum
 {
     ERR_ABORT = -1,			// Operation aborted
     ERR_NO_ERROR = 0,		// No error (returns 0)
-    ERR_OPEN_SER_DEV,
-    ERR_OPEN_SER_COMM,    
-    ERR_WRITE_ERROR,
+
+	ERR_BUSY,
+	ERR_ILLEGAL_ARG,
+	ERR_PORTTALK_NOT_FOUND,
+	ERR_WRITE_ERROR,
     ERR_WRITE_TIMEOUT,
     ERR_READ_ERROR,
     ERR_READ_TIMEOUT,
-    ERR_BYTE_LOST,        
-    ERR_CREATE_FILE,      
-    ERR_OPEN_TIDEV,       
-    ERR_ROOT,            	// Root permissions required
-    ERR_PROBE_FAILED,    
-    ERR_OPEN_PIPE,       
-    ERR_CLOSE_PIPE,      
-    ERR_OPP_NOT_AVAIL,   
-    ERR_IOCTL,           
-    ERR_SETUP_COMM,      
-    ERR_SET_COMMSTATE,   
-    ERR_GET_COMMSTATE,   
-    ERR_GET_COMMTIMEOUT, 
-    ERR_SET_COMMTIMEOUT, 
-    ERR_FLUSH_COMM,      
-    ERR_OPEN_USB_DEV,    
-    ERR_USB_DEVICE_CMD,  
-    ERR_LIBUSB_INIT,     
-    ERR_LIBUSB_OPEN,     
-    ERR_LIBUSB_RESET,    
-    ERR_FREELIBRARY,     
-    ERR_IPC_KEY,         
-    ERR_SHM_GET,         	
-    ERR_SHM_ATTACH,      	
-    ERR_SHM_DETACH,      	
-    ERR_SHM_RMID,        	
-    ERR_OPEN_FILE_MAP,   	
-    ERR_ILLEGAL_ARG,     	
-    ERR_NO_RESOURCES,    	
-    ERR_INVALID_PORT,    	
-    ERR_PORTTALK_NOT_FOUND,	
-    ERR_TIGLUSB_VERSION, 	
+	ERR_PROBE_FAILED,
+	ERR_CREATEFILE,
+	ERR_SETUPCOMM,
+	ERR_GETCOMMSTATE,
+	ERR_SETCOMMSTATE,
+	ERR_GETCOMMTIMEOUT,
+	ERR_SETCOMMTIMEOUT,
+	ERR_PURGECOMM,
+	ERR_LOADLIBRARY,
+	ERR_FREELIBRARY,
+	ERR_TIGLUSB_VERSION,
+	ERR_TIGLUSB_OPEN,
+	ERR_TIGLUSB_FLUSH,
+    ERR_TIGLUSB_RESET,
+	ERR_BYTE_LOST,
+	ERR_FINDWINDOW,
+	ERR_OPENFILEMAPPING,
+	ERR_MAPVIEWOFFILE,
 
-    ERR_NODE_NONEXIST,	
-    ERR_NODE_PERMS,		
-    ERR_NOTLOADED,		
-    ERR_NOTMOUNTED,		
-
-    ERR_TIGLUSB_FLUSH,   
-    ERR_TIGLUSB_RESET,   
-
-	ERR_LIB_INIT,
-	ERR_BUSY,
 } TiCableError;
 
 #endif
